--- a/index.html
+++ b/index.html
@@ -579,10 +579,17 @@
                          <div class="text-center m-auto">
                              <p class="text-dark size-sm"><span class="base-color">SRB</span></p>
                              <ul class="list-inline socails">
-                                 <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-facebook-filled text-dark mr-2"></i></a></li>
+                                 <!--<li class="list-inline-item"><a class="text-white" href="#"><i class="lni-facebook-filled text-dark mr-2"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-twitter-filled text-dark mr-2"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-github-original text-dark mr-2"></i></a></li>
-                                 <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-linkedin-original text-dark mr-2"></i></a></li>
+                                 <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-linkedin-original text-dark mr-2"></i></a></li> -->
+                                 <li class="list-inline-item"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original text-dark"></i></a></li>
+                                                <!-- <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni-youtube-filled text-dark"></i></a></li> -->
+                                 <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled text-dark"></i></a></li>
+                                                <!-- <li class="list-inline-item"><a href="javascript:void(0);">
+                                                    <i class="lni-github-original text-dark"></i></a></li> -->
+                                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/samanthaballard2/"><i class="lni-linkedin-original text-dark"></i></a></li>
+                                                <!-- <li class="list-inline-item"><a href="https://www.tiktok.com/@air.sea.sam"><i class="lni-tiktok-original text-dark"></i></a></li> -->
                              </ul>
                              <p class="pl-3 text-dark"><span class="base-color">Copyright © 2019. Template has been designed by <a class="base-color" href="javascript:void(0);">Retrina</span></a></p>
                          </div>
