--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                                              <!-- <p class="text-dark">Website : <span class="text-gray">www.samanthaballard.science</span></p> -->
                                              <!-- <p class="text-dark">Phone : <span class="text-gray">+123 456 7890</span></p> -->
                                              <p class="text-dark mb-2"><span class="base-color">City : Miami, Florida, USA</span></p>
-                                             <p class="text-dark mb-2"><span class="base-color">Age : 27</span></p>
+                                             <!--<p class="text-dark mb-2"><span class="base-color">Age : 27</span></p>-->
                                          </div>
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                             
@@ -521,10 +521,10 @@
                              <div class="row mt-5">
                                  <div class="col-lg-6 text-left">
                                      <div class="contact-form">
-                                         <h6 class="font-weight-semibold">Let’s Get Work With Me </h6>
+                                         <!--<h6 class="font-weight-semibold">Let's Work Together</h6>
                                          <!-- <p class="text-muted mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p> -->
                                          <div class="mt-4">
-                                             <p class="mt-2 font-weight-bold"> Address : <span class="text-muted"> University of Miami,Florida, USA</span></p>
+                                             <!--<p class="mt-2 font-weight-bold"> Address : <span class="text-muted"> University of Miami,Florida, USA</span></p>
                                              <!-- <p class="mt-2 font-weight-bold"> Phone : <span class="text-muted"> +1 212-695-1962</span></p> -->
                                              <p class="mt-2 font-weight-bold"> Mail : <span class="text-muted">srb146@miami.edu</span></p>
                                              <!-- <p class="mt-2 font-weight-bold"> Web : <span class="text-muted">www.retrina.com </span></p> -->
