--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                                <div class="col-lg-4 text-left">
                                 <div class="services-item">
                                     <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                            <i class="lni lni-graph size-md base-color"></i>
+                                        <i class="lni lni-laptop size-md base-color"></i>
                                     </div>
                                     <div class="services-content">
                                         <h5 class="mb-3">DATA SCIENCE</h5>
