--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
                                      </div>
                                      <div class="row">
                                          <div class="col-12">
-                                             <a href="mailto:srb146@miami.edu" class="pill-button mt-3 mb-lg-0">Send Message for Academia-Related Inquires</a>
-                                             <a href="mailto:air.sea.sam@gmail.com" class="pill-button mt-3 mb-lg-0">Send Message for Social Media Collaborations</a>
+                                             <a href="mailto:srb146@miami.edu" class="pill-button mt-3 mb-lg-0"> Academia-Related Inquires</a>
+                                             <a href="mailto:air.sea.sam@gmail.com" class="pill-button mt-3 mb-lg-0">Social Media Collaborations</a>
                                          </div>
                                      </div>
                                      <div class="row">
