--- a/portfolio_edit.html
+++ b/portfolio_edit.html
@@ -217,3 +217,73 @@
         </div>
     </div>
 </section>
+
+ <!-- <section id="contact" class="section pp-scrollable contact" data-navigation-color="#fff" data-navigation-tooltip="CONTACT">
+                 <div class="display-table">
+                     <div class="display-content">
+                         <div class="container">
+                             <div class="row">
+                                 <div class="title-small">
+                                     <p class="text-dark mb-2"><span class="base-color">Get in Touch</span></p>
+                                 </div>
+                                 <div class="col-lg-12">
+                                     <div class="text-left">
+                                         <h2 class="text-dark"> <span class="base-color">Get In Touch</span></h2>
+                                         <p class="text-muted mx-auto section-subtitle mt-3">Feel Free To Contact Me Any Time</p>
+                                     </div>
+                                 </div>
+                             </div>
+                             <!-- <div class="row mt-5">
+                                 <div class="col-lg-12">
+                                     <div id="my-map" data-location-lat="43.053454"  data-location-lng="-76.144508" data-location-icon="http://placehold.it/60x30"></div>
+                                 </div>
+                             </div>  -->
+                             <div class="row mt-5">
+                                    <div class="col-lg-6 text-left">
+                                        <div class="contact-form">
+                                            <!--<h6 class="font-weight-semibold">Let's Work Together</h6>
+                                            <!-- <p class="text-muted mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p> -->
+                                            <div class="mt-4">
+                                                <!--<p class="mt-2 font-weight-bold"> Address : <span class="text-muted"> University of Miami,Florida, USA</span></p>
+                                                <!-- <p class="mt-2 font-weight-bold"> Phone : <span class="text-muted"> +1 212-695-1962</span></p> -->
+                                                <p class="mt-2 font-weight-bold"> Mail : <span class="text-muted">srb146@miami.edu</span></p>
+                                                <!-- <p class="mt-2 font-weight-bold"> Web : <span class="text-muted">www.retrina.com </span></p> -->
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 text-left">
+                                        <h6 class="font-weight-semibold">How can I help you ? </h6>
+                                        <form id="contactForm" class="form mt-3">
+                                            <div class="row">
+                                                <div class="col-lg-12 form-item">
+                                                    <div class="form-group">
+                                                        <input name="name" id="name" type="text" class="form-control" data-name-error="Name is required" placeholder="Your Name*" required >
+                                                    </div>
+                                                </div>
+                                                <div class="col-lg-12 form-item">
+                                                    <div class="form-group">
+                                                        <input name="email" id="email" type="email" class="form-control" data-email-error="Email is required" data-email-valid="Email is not valid" placeholder="Your Email*" required >
+                                                    </div>
+                                                </div>
+                                                <div class="col-12 form-item">
+                                                    <div class="form-group">
+                                                        <textarea name="comments" id="comments" rows="2" class="form-control h-auto" data-comment-error="Comments is required" placeholder="Your message..."></textarea>
+                                                    </div>
+                                                </div>
+                                                <div class="col-sm-12 mt-1 text-left">
+                                                    <button type="button" class="pill-button" id="submit-btn" onclick="sendEmail()">Send Message</button>
+                                                    <div id="message" class="toast text-white shadow-none border-0" role="alert" aria-live="assertive" aria-atomic="true" data-delay="4000" >
+                                                        <div class="toast-body d-inline-block"></div>
+                                                        <button type="button" class="pr-3 close" data-dismiss="toast" aria-label="Close">
+                                                            <span aria-hidden="true" class="lni-close size-xs text-white"></span>
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section> -->
