--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Samantha Ballard's Website</title>
+        <title>Samantha's Website</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="author" content="Samantha Ballard" />
@@ -166,7 +166,7 @@
                                     <div class="hero-content">
                                         <h1 class="text-dark mb-2"><span class="base-color">I'm Samantha</span></h1>
                                         <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A </span> <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></h4>
-                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">I am a PhD student @ University of Miami studying air sea physics & remote sensing. I have a Bachelor's of Science in Meteorology from Penn State. I am a scientific programmer. </span></p>
+                                        <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">I am a PhD student @ University of Miami studying air sea physics & remote sensing and a B.S. in Meteorology  </span></p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);"><i class="lni-facebook-filled text-dark"></i></a></li> -->
@@ -204,7 +204,7 @@
                                  </div>
                                  <div class="col-lg-6 personal-item  mb-4 mb-lg-0">
                                      <h2 class="text-dark mb-2"><span class="base-color">About Me</span></h2>
-                                     <h5 class="text-dark mb-2"><span class="base-color">Hello, I'm Samantha Ballard </span></h5>
+                                     <h5 class="text-dark mb-2"><span class="base-color">Hello, I'm Samantha </span></h5>
                                      <div class="row">
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                              <!-- <p class="text-dark">Birthday : <span class="text-gray"> 1 April 1990</span></p> -->
@@ -272,7 +272,9 @@
                                          <li>
                                              <h6 class="base-color mb-0">Marine Physics PhD Univeristy of Miami</h6>
                                              <small class="text-muted ">Current</small>
-                                             <p class="base-color mb-0">Department of Applied Marine Physics. Air Sea Interaction/Remote Sensing Lab. Advisor: Dr. Hans Graber</p>
+                                             <p class="base-color mb-0">Department of Ocean Sciences</p> 
+                                             <p>Air Sea Interaction/Remote Sensing Lab</p>
+                                             <p>Advisor: Dr. Hans Graber</p>
                                          </li>
                                      </ul>
                                  </div>
@@ -281,21 +283,44 @@
                                      <ul class="timeline">
                                          <li>
                                              <h6 class="base-color mb-0">Doctoral Research Assistant </h6>
+                                             <small class="text-muted ">Univeristy of Miami</small>
                                              <small class="text-muted ">Current</small>
                                              <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                          </li>
+                                         li>
+                                         <h6 class="base-color mb-0">Coastal Land Air Sea Interaction Field Experiment</h6>
+                                         <small class="text-muted ">Monterey Bay, CA</small>
+                                         <small class="text-muted ">Dissertation</small>
+                                         <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
+                                        </li>
+                                         li>
+                                             <h6 class="base-color mb-0">Sea Turtle Researcher/Surveyor</h6>
+                                             <small class="text-muted ">Miami,Fl</small>
+                                             <small class="text-muted ">Current</small>
+                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
+                                         </li>
+                                         
                                          <li>
                                              <h6 class="base-color mb-0">NASA Intern </h6>
-                                             <small class="text-muted ">Summer 2016</small>
+                                             <small class="text-muted ">Greenbelt, MD</small>
+                                             <small class="text-muted ">Summer 2017</small>
                                              <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
+                                         </li>
+                                         li>
+                                         <h6 class="base-color mb-0">Flow Encountering Abrupt Topography Experiment</h6>
+                                         <small class="text-muted ">Koror, Palau</small>
+                                         <small class="text-muted ">Summer 2016</small>
+                                         <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                          </li>
                                          <li>
                                             <h6 class="base-color mb-0">NOAA National Weather Service Intern</h6>
+                                            <small class="text-muted ">State College, PA</small>
                                             <small class="text-muted ">Spring 2015</small>
                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                         </li>
                                         <li>
-                                            <h6 class="base-color mb-0">University of Colorado Boulder/ SouthWest Research Institute REU Intern </h6>
+                                            <h6 class="base-color mb-0">University of Colorado Boulder/ SouthWest Research Institute Space Weather Intern </h6>
+                                            <small class="text-muted ">Boulder, CO</small>
                                             <small class="text-muted ">Summer 2014</small>
                                             <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                         </li>
