--- a/index.html
+++ b/index.html
@@ -277,6 +277,28 @@
                                              <p>Advisor: Dr. Hans Graber</p>
                                          </li>
                                      </ul>
+                                     <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
+                                            <div class="skillbar clearfix" data-percent="100%">
+                                                <div class="skillbar-title"><span>MATLAB</span></div>
+                                                <div class="skillbar-bar"></div>
+                                                <!-- <div class="skill-bar-percent">95%</div> -->
+                                            </div>
+                                            <div class="skillbar clearfix " data-percent="100%">
+                                                <div class="skillbar-title"><span>PYTHON</span></div>
+                                                <div class="skillbar-bar"></div>
+                                                <!-- <div class="skill-bar-percent">85%</div> -->
+                                            </div>
+                                            <div class="skillbar clearfix" data-percent="100%">
+                                                <div class="skillbar-title"><span>FORTRAN</span></div>
+                                                <div class="skillbar-bar"></div>
+                                                <!-- <div class="skill-bar-percent">75%</div> -->
+                                            </div>
+                                            <div class="skillbar clearfix" data-percent="100%">
+                                                <div class="skillbar-title"><span>IDL</span></div>
+                                                <div class="skillbar-bar"></div>
+                                                <!-- <div class="skill-bar-percent">80%</div> -->
+                                            </div>
+                                        </div>
                                  </div>
                                 <div class="col-lg-6">
                                      <h3 class="text-dark mb-2 mt-5 mt-lg-0"><i class="lni-pencil base-color"></i><span class="base-color">Experience</span></h3>
