--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                              <p>Air Sea Interaction/Remote Sensing Lab</p>
                                              <p>Advisor: Dr. Hans Graber</p>
                                          </li>
-                                     </ul>
+    
                                      <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
                                             <div class="skillbar clearfix" data-percent="100%">
                                                 <div class="skillbar-title"><span>MATLAB</span></div>
@@ -299,6 +299,7 @@
                                                 <!-- <div class="skill-bar-percent">80%</div> -->
                                             </div>
                                         </div>
+                                        </ul>
                                  </div>
                                 <div class="col-lg-6">
                                      <h3 class="text-dark mb-2 mt-5 mt-lg-0"><i class="lni-pencil base-color"></i><span class="base-color">Experience</span></h3>
@@ -349,7 +350,7 @@
                                      </ul>
                                  </div>
                              </div> 
-                             <div class="row pt-6">
+                             <!-- <div class="row pt-6">
                                  <div class="col-lg-6">
                                      <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
                                          <div class="skillbar clearfix" data-percent="100%">
@@ -373,7 +374,7 @@
                                              <!-- <div class="skill-bar-percent">80%</div> -->
                                          </div>
                                      </div>
-                                 </div>
+                                 </div> -->
                                   <!-- <div class="col-lg-6"> -->
                                      <!-- <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
                                          <div class="skillbar clearfix" data-percent="95%">
