--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
                                              <h6 class="base-color mb-0">Marine Physics PhD Univeristy of Miami</h6>
                                              <small class="text-muted ">Current</small>
                                              <p class="base-color mb-0">Department of Ocean Sciences</p> 
-                                             <p>Air Sea Interaction/Remote Sensing Lab</p>
-                                             <p>Advisor: Dr. Hans Graber</p>
+                                             <p class="base-color mb-0">Air Sea Interaction/Remote Sensing Lab</p>
+                                             <p class="base-color mb-0">Advisor: Dr. Hans Graber</p>
                                          </li>
     
-                                     <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
+                                        <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
                                             <div class="skillbar clearfix" data-percent="100%">
                                                 <div class="skillbar-title"><span>MATLAB</span></div>
                                                 <div class="skillbar-bar"></div>
@@ -357,24 +357,24 @@
                                              <div class="skillbar-title"><span>MATLAB</span></div>
                                              <div class="skillbar-bar"></div>
                                              <!-- <div class="skill-bar-percent">95%</div> -->
-                                         </div>
+                                         <!-- </div>
                                          <div class="skillbar clearfix " data-percent="100%">
                                              <div class="skillbar-title"><span>PYTHON</span></div>
                                              <div class="skillbar-bar"></div>
                                              <!-- <div class="skill-bar-percent">85%</div> -->
-                                         </div>
+                                         <!-- </div>
                                          <div class="skillbar clearfix" data-percent="100%">
                                              <div class="skillbar-title"><span>FORTRAN</span></div>
                                              <div class="skillbar-bar"></div>
                                              <!-- <div class="skill-bar-percent">75%</div> -->
-                                         </div>
+                                         <!-- </div>
                                          <div class="skillbar clearfix" data-percent="100%">
                                              <div class="skillbar-title"><span>IDL</span></div>
                                              <div class="skillbar-bar"></div>
                                              <!-- <div class="skill-bar-percent">80%</div> -->
-                                         </div>
+                                       <!--   </div>
                                      </div>
-                                 </div> -->
+                                 </div> --> --> --> --> -->
                                   <!-- <div class="col-lg-6"> -->
                                      <!-- <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
                                          <div class="skillbar clearfix" data-percent="95%">
