--- a/index.html
+++ b/index.html
@@ -277,28 +277,7 @@
                                              <p class="base-color mb-0">Advisor: Dr. Hans Graber</p>
                                          </li>
                                     </ul>
-                             <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
-                                            <div class="skillbar clearfix" data-percent="100%">
-                                                <div class="skillbar-title"><span>MATLAB</span></div>
-                                                <div class="skillbar-bar"></div>
-                                                <!-- <div class="skill-bar-percent">95%</div> -->
-                                            </div>
-                                            <div class="skillbar clearfix " data-percent="100%">
-                                                <div class="skillbar-title"><span>PYTHON</span></div>
-                                                <div class="skillbar-bar"></div>
-                                                <!-- <div class="skill-bar-percent">85%</div> -->
-                                            </div>
-                                            <div class="skillbar clearfix" data-percent="100%">
-                                                <div class="skillbar-title"><span>FORTRAN</span></div>
-                                                <div class="skillbar-bar"></div>
-                                                <!-- <div class="skill-bar-percent">75%</div> -->
-                                            </div>
-                                            <div class="skillbar clearfix" data-percent="100%">
-                                                <div class="skillbar-title"><span>IDL</span></div>
-                                                <div class="skillbar-bar"></div>
-                                                <!-- <div class="skill-bar-percent">80%</div> -->
-                                            </div>
-                                </div>
+                             
                                         
                                  </div>
                                 <div class="col-lg-6">
@@ -350,29 +329,29 @@
                                      </ul>
                                  </div>
                              </div> 
-                             <!-- <div class="row pt-6">
+                             <div class="row pt-6">
                                  <div class="col-lg-6">
                                      <div class="skill-box pt-4 pt-lg-0 mt-4 mt-lg-0">
                                          <div class="skillbar clearfix" data-percent="100%">
                                              <div class="skillbar-title"><span>MATLAB</span></div>
                                              <div class="skillbar-bar"></div>
-                                             <!-- <div class="skill-bar-percent">95%</div> -->
-                                         <!-- </div>
+                                              <!--div class="skill-bar-percent">95%</div> -->
+                                         </div>
                                          <div class="skillbar clearfix " data-percent="100%">
                                              <div class="skillbar-title"><span>PYTHON</span></div>
                                              <div class="skillbar-bar"></div>
-                                             <!-- <div class="skill-bar-percent">85%</div> -->
-                                         <!-- </div>
+                                            <!--<div class="skill-bar-percent">85%</div> -->
+                                         </div>
                                          <div class="skillbar clearfix" data-percent="100%">
                                              <div class="skillbar-title"><span>FORTRAN</span></div>
                                              <div class="skillbar-bar"></div>
-                                             <!-- <div class="skill-bar-percent">75%</div> -->
-                                         <!-- </div>
+                                             <!--<div class="skill-bar-percent">75%</div> -->
+                                         </div>
                                          <div class="skillbar clearfix" data-percent="100%">
                                              <div class="skillbar-title"><span>IDL</span></div>
                                              <div class="skillbar-bar"></div>
-                                             <!-- <div class="skill-bar-percent">80%</div> -->
-                                       <!--   </div>
+                                             <!--<div class="skill-bar-percent">80%</div> -->
+                                        </div>
                                      </div>
                                  </div> 
                                   <!-- <div class="col-lg-6"> -->
