--- a/index.html
+++ b/index.html
@@ -254,12 +254,7 @@
                                  <div class="title-small">
                                      <p class="text-dark mb-2"><span class="base-color">Resume</span></p>
                                  </div>
-                                 <div class="col-lg-12">
-                                     <div class="text-left">
-                                         <h2 class="text-dark mb-3"><span class="base-color">My Resume</span></h2>
-                                         <!-- <p class="text-muted">I Am Looking for Post Doctoral Positions </p> -->
-                                     </div>
-                                 </div>
+                                 
                              </div>
                              <div class="col-lg-6">
                                     <h3 class="text-dark mb-2 mt-5 mt-lg-0"><i class="lni-pencil base-color"></i><span class="base-color">Experience</span></h3>
@@ -310,6 +305,12 @@
                                     </ul>
                                 </div>
                             </div> 
+                            <div class="col-lg-12">
+                                    <div class="text-right">
+                                        <h2 class="text-dark mb-3"><span class="base-color">My Resume</span></h2>
+                                        <!-- <p class="text-muted">I Am Looking for Post Doctoral Positions </p> -->
+                                    </div>
+                            </div>
                              <div class="row mt-4">
                                  <div class="col-lg-6">
                                      <h3 class="text-dark mb-2"><i class="lni-graduation base-color"></i><span class="base-color">Education</span></h3>
