--- a/index.html
+++ b/index.html
@@ -336,22 +336,22 @@
                                          <div class="skillbar clearfix" data-percent="100%">
                                              <div class="skillbar-title"><span>MATLAB</span></div>
                                              <div class="skillbar-bar"></div>
-                                              <!--div class="skill-bar-percent">95%</div> -->
+                                            <div class="skill-bar-percent">95%</div> 
                                          </div>
                                          <div class="skillbar clearfix " data-percent="100%">
                                              <div class="skillbar-title"><span>PYTHON</span></div>
                                              <div class="skillbar-bar"></div>
-                                            <!--<div class="skill-bar-percent">85%</div> -->
+                                             <div class="skill-bar-percent">85%</div> 
                                          </div>
                                          <div class="skillbar clearfix" data-percent="100%">
                                              <div class="skillbar-title"><span>FORTRAN</span></div>
                                              <div class="skillbar-bar"></div>
-                                             <!--<div class="skill-bar-percent">75%</div> -->
+                                             <div class="skill-bar-percent">75%</div> 
                                          </div>
                                          <div class="skillbar clearfix" data-percent="100%">
                                              <div class="skillbar-title"><span>IDL</span></div>
                                              <div class="skillbar-bar"></div>
-                                             <!--<div class="skill-bar-percent">80%</div> -->
+                                             <div class="skill-bar-percent">80%</div> 
                                         </div>
                                      </div>
                                  </div> 
