--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                      </div>
                                      <div class="row">
                                         <div class="col-12">
-                                            <a href="assets\img\cv.pdf" class="pill-button mt-3 mb-lg-0 mr-4" target="_blank">Download CV</a>
+                                            <a href="assets\img\SamanthaCV.pdf" class="pill-button mt-3 mb-lg-0 mr-4" target="_blank">Download CV</a>
                                             
                                         </div>
                                     </div>
