--- a/index.html
+++ b/index.html
@@ -410,22 +410,22 @@
                                             <i class="lni lni-island size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">COASTAL LAND AIR-SEA INTERACTION EXPERIMENT</h5>
+                                            <h5 class="mb-3">LAND AIR-SEA PHYSICS</h5>
                                             <p class="text-muted mb-0"></p> <!--text goes here -->
                                         </div>
                                     </div>
                                 </div>
                                 <!-- Item 02 -->
                                 <div class="col-lg-4 text-left">
-                                    <div class="services-item">
-                                        <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                            <i class="lni lni-bug size-md base-color"></i>
+                                        <div class="services-item">
+                                            <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                                <i class="lni lni-laptop size-md base-color"></i>
+                                            </div>
+                                            <div class="services-content">
+                                                <h5 class="mb-3">DATA SCIENCE</h5>
+                                                <p class="text-muted mb-0"></p>
+                                            </div>
                                         </div>
-                                        <div class="services-content">
-                                            <h5 class="mb-3">SEA TURTLES</h5>
-                                            <p class="text-muted mb-0">.</p>
-                                        </div>
-                                    </div>
                                 </div>
                                 <!-- Item 03 -->
                                 <div class="col-lg-4 text-left">
@@ -434,7 +434,7 @@
                                             <i class="lni lni-drop size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">FLOW ENCOUNTERING ABRUPT TOPOGRAPHY EXPERIMENT</h5>
+                                            <h5 class="mb-3"></h5>
                                             <p class="text-muted mb-0"></p>
                                         </div>
                                     </div>
@@ -446,7 +446,7 @@
                                             <i class="lni lni-thunder size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">AIR-SEA PHYSICS/METEOROLOGY</h5>
+                                            <h5 class="mb-3">WEATHER/CLIMATE FORECASTING</h5>
                                             <p class="text-muted mb-0"></p>
                                         </div>
                                     </div>
@@ -476,19 +476,19 @@
                                         </div>
                                     </div>
                                 </div>
-                         
+                                <div class="col-lg-4 text-left">
+                                        <div class="services-item">
+                                            <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                                <i class="lni lni-bug size-md base-color"></i>
+                                            </div>
+                                            <div class="services-content">
+                                                <h5 class="mb-3">SEA TURTLES</h5>
+                                                <p class="text-muted mb-0">.</p>
+                                            </div>
+                                        </div>
+                                    </div>
 
-                               <div class="col-lg-4 text-left">
-                                <div class="services-item">
-                                    <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                        <i class="lni lni-laptop size-md base-color"></i>
-                                    </div>
-                                    <div class="services-content">
-                                        <h5 class="mb-3">DATA SCIENCE</h5>
-                                        <p class="text-muted mb-0"></p>
-                                    </div>
-                                </div>
-                                </div>
+                               
 
                                 <div class="col-lg-4 text-left">
                                 <div class="services-item">
