--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                                             <i class="lni lni-drop size-md base-color"></i>
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3"></h5>
+                                            <h5 class="mb-3">WAVES</h5>
                                             <p class="text-muted mb-0"></p>
                                         </div>
                                     </div>
