--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                                             
                                         </div>
                                         <div class="services-content">
-                                            <h5 class="mb-3">REMOTE SENSING</h5>
+                                            <h5 class="mb-3">REMOTE SENSING/SATELLITES</h5>
                                             <p class="text-muted mb-0"></p>
                                         </div>
                                     </div>
