--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                                              <!--<p class="text-dark mb-2"><span class="base-color">Age : 27</span></p>-->
                                          </div>
                                          <div class="col-lg-5 col-sm-6 personal-info">
-                                            <p class="text-dark mb-2"><span class="base-color">City : Miami, Florida, USA</span></p>
-                                            <p class="text-dark mb-2"><span class="base-color">Degree : PhD</span></p>
+                                            <p class="text-dark mb-2"><span class="base-color">City: Miami, Florida, USA</span></p>
+                                            <p class="text-dark mb-2"><span class="base-color">Degree: PhD</span></p>
                                             
                                             
                                              <!-- <p class="text-dark">Freelance : <span class="text-gray">Available</span></p> -->
@@ -225,8 +225,8 @@
                                      </div>
                                      <div class="row">
                                          <div class="col-12">
-                                             <a href="mailto:srb146@miami.edu" class="pill-button mt-3 mb-lg-0"> Academia-Related Inquires</a>
-                                             <a href="mailto:air.sea.sam@gmail.com" class="pill-button mt-3 mb-lg-0">Social Media Collaborations</a>
+                                             <a href="mailto:srb146@miami.edu" class="pill-button mt-3 mb-lg-0"> Message: Research-Related Inquires</a>
+                                             <a href="mailto:air.sea.sam@gmail.com" class="pill-button mt-3 mb-lg-0">Message: Social Media Collabs</a>
                                          </div>
                                      </div>
                                      <div class="row">
