--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                                      </div>
                                      <div class="row">
                                          <div class="col-12">
-                                             <a href="mailto:srb146@miami.edu" class="pill-button mt-3 mb-lg-0"> Message: Research-Related Inquires</a>
-                                             <a href="mailto:air.sea.sam@gmail.com" class="pill-button mt-3 mb-lg-0">Message: Social Media Collabs</a>
+                                             <a href="mailto:srb146@miami.edu" class="pill-button mt-3 mb-lg-0"> Message about Research</a>
+                                             <a href="mailto:air.sea.sam@gmail.com" class="pill-button mt-3 mb-lg-0">Message about Social Media Collaborations</a>
                                          </div>
                                      </div>
                                      <div class="row">
