--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
                                             <i class="lni lni-thought size-md base-color"></i>
                                     </div>
                                     <div class="services-content">
-                                        <h5 class="mb-3">SCIENCE COMMUNICATION</h5>
-                                        <p class="text-muted mb-0">Weather and Marine Forecasting, Coding Tutorials, Social Media Blogs, Videos/Youtube</p>
+                                        <h5 class="mb-3">SCIENCE COMMUNICATION/OUTREACH</h5>
+                                        <p class="text-muted mb-0">Weather and Marine Forecasting, Coding Tutorials, Social Media Blogs, Videos/Youtube, Mentoring, Lab Coach</p>
                                     </div>
                                 </div>
                                 </div>
