--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
                                              <!-- <p class="text-dark py-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque scelerisque diam non nisi semper, et elementum lorem ornare.</p> -->
                                          </li>
                                          <li>
-                                             <h6 class="base-color mb-0">Marine Physics PhD Univeristy of Miami</h6>
+                                             <h6 class="base-color mb-0">Marine Physics PhD University of Miami</h6>
                                              <small class="text-muted ">Current</small>
                                              <p class="base-color mb-0">Department of Ocean Sciences</p> 
                                              <p class="base-color mb-0">Air Sea Interaction/Remote Sensing Lab</p>
-                                             <p class="base-color mb-0">Advisor: Dr. Hans Graber</p>
+                                             <!--<p class="base-color mb-0">Advisor: Dr. Hans Graber</p> -->
                                          </li>
                                     </ul>
                              
