--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                                     </div>
                                     <div class="services-content">
                                         <h5 class="mb-3">INSTRUMENTATION</h5>
-                                        <p class="text-muted mb-0">At-Home Weather Station, Tidal Station, Nautical Radar, Temperature, Humidity and Pressure Sensors, Ultra-Sonic Anemometers, Buoys, Satellites, SAR, Hygrometer, Lasers, Radiosondes, XBTs, PIES, CTDs, Moorings </p>
+                                        <p class="text-muted mb-0">At-Home Weather Station, Nautical Radar, Temperature, Humidity and Pressure Sensors, Ultra-Sonic Anemometers, Buoys, Satellites, SAR, Hypsometer, Lasers, Radiosondes, XBTs, PIES, CTDs, Moorings, Tidal Stations </p>
                                     </div>
                                 </div>
                                 </div>
@@ -520,6 +520,18 @@
                                     </div>
                                 </div>
                                 </div>
+
+                                <div class="col-lg-4 text-left">
+                                        <div class="services-item">
+                                            <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                                    <i class="lni lni-thought size-md base-color"></i>
+                                            </div>
+                                            <div class="services-content">
+                                                <h5 class="mb-3">HOBBIES</h5>
+                                                <p class="text-muted mb-0">Rollerskating, Graphic Design, Paddleboarding and Other Watersports, Yoga/Pilates, Forecasting</p>
+                                            </div>
+                                        </div>
+                                        </div>
                         
                         </div>
                         </div>
