--- a/index.html
+++ b/index.html
@@ -472,6 +472,17 @@
                                 </div>
                                 <!-- Item 06 -->
                                 <div class="col-lg-4 text-left">
+                                        <div class="services-item">
+                                            <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                                    <i class="lni lni-rocket size-md base-color"></i>
+                                            </div>
+                                            <div class="services-content">
+                                                <h5 class="mb-3">WIND</h5>
+                                                <p class="text-muted mb-0">Surface, Coastal and 3D Winds, Preliminary P-Band SAR Wind Retrieval Algorithm Using NASA's EcoSAR, LES and Coupled Ocean-Atmosphere Modeling</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                <div class="col-lg-4 text-left">
                                     <div class="services-item">
                                         <div class="float-left mt-lg-1 d-inline-block services-icon">
                                                 <i class="lni lni-rocket size-md base-color"></i>
@@ -515,8 +526,8 @@
                                             <i class="lni lni-thought size-md base-color"></i>
                                     </div>
                                     <div class="services-content">
-                                        <h5 class="mb-3">SCIENCE COMMUNICATION/OUTREACH</h5>
-                                        <p class="text-muted mb-0">Weather and Marine Forecasting, Coding Tutorials, Social Media Blogs, Videos/Youtube, Mentoring, Lab Coach</p>
+                                        <h5 class="mb-3">SCIENCE COMMUNICATION</h5>
+                                        <p class="text-muted mb-0">Weather and Marine Forecasting, Coding Tutorials, Social Media Blogs/Videos</p>
                                     </div>
                                 </div>
                                 </div>
@@ -532,6 +543,17 @@
                                             </div>
                                         </div>
                                         </div>
+                                <div class="col-lg-4 text-left">
+                                                <div class="services-item">
+                                                    <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                                            <i class="lni lni-thought size-md base-color"></i>
+                                                    </div>
+                                                    <div class="services-content">
+                                                        <h5 class="mb-3">OUTREACH</h5>
+                                                        <p class="text-muted mb-0">Mentoring, Beach Cleanups, Sea Turtle Beach Surveys, Local Shelters</p>
+                                                    </div>
+                                                </div>
+                                                </div>
                         
                         </div>
                         </div>
