--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                                 <div class="col-lg-4 text-left">
                                         <div class="services-item">
                                             <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                                    <i class="lni lni-rocket size-md base-color"></i>
+                                                    <i class="lni lni-flag size-md base-color"></i>
                                             </div>
                                             <div class="services-content">
                                                 <h5 class="mb-3">WIND</h5>
@@ -486,7 +486,7 @@
                                     <div class="col-lg-4 text-left">
                                             <div class="services-item">
                                                 <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                                        <i class="lni lni-rocket size-md base-color"></i>
+                                                        <i class="lni lni-cloud size-md base-color"></i>
                                                 </div>
                                                 <div class="services-content">
                                                     <h5 class="mb-3">CLOUDS</h5>
@@ -547,7 +547,7 @@
                                 <div class="col-lg-4 text-left">
                                         <div class="services-item">
                                             <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                                    <i class="lni lni-thought size-md base-color"></i>
+                                                    <i class="lni lni-pallet size-md base-color"></i>
                                             </div>
                                             <div class="services-content">
                                                 <h5 class="mb-3">HOBBIES</h5>
