--- a/index.html
+++ b/index.html
@@ -483,17 +483,7 @@
                                         </div>
                                     </div>
                                     
-                                    <div class="col-lg-4 text-left">
-                                            <div class="services-item">
-                                                <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                                        <i class="lni lni-cloud size-md base-color"></i>
-                                                </div>
-                                                <div class="services-content">
-                                                    <h5 class="mb-3">CLOUDS</h5>
-                                                    <p class="text-muted mb-0">Classification, Radiative Feedbacks, Lenticular and Other Orographically Forced Clouds,  </p>
-                                                </div>
-                                            </div>
-                                        </div>
+                                   
                                 <div class="col-lg-4 text-left">
                                     <div class="services-item">
                                         <div class="float-left mt-lg-1 d-inline-block services-icon">
@@ -505,6 +495,17 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="col-lg-4 text-left">
+                                        <div class="services-item">
+                                            <div class="float-left mt-lg-1 d-inline-block services-icon">
+                                                    <i class="lni lni-cloud size-md base-color"></i>
+                                            </div>
+                                            <div class="services-content">
+                                                <h5 class="mb-3">CLOUDS</h5>
+                                                <p class="text-muted mb-0">Classification, Radiative Feedbacks, Lenticular and Other Orographically Forced Clouds,  </p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 <div class="col-lg-4 text-left">
                                         <div class="services-item">
                                             <div class="float-left mt-lg-1 d-inline-block services-icon">
@@ -547,7 +548,7 @@
                                 <div class="col-lg-4 text-left">
                                         <div class="services-item">
                                             <div class="float-left mt-lg-1 d-inline-block services-icon">
-                                                    <i class="lni lni-pallet size-md base-color"></i>
+                                                    <i class="lni lni-sprout size-md base-color"></i>
                                             </div>
                                             <div class="services-content">
                                                 <h5 class="mb-3">HOBBIES</h5>
