--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                 <div class="col-lg-12">
                                     <div class="hero-content">
                                         <h1 class="text-dark mb-2"><span class="base-color">I'm Samantha</span></h1>
-                                        <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A </span> <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></h4>
+                                        <h4 class="text-dark text-capitalize mb-0"><span class="base-color">A  <span class="element" data-elements="PhD Candidate.,Physicist.,Meteorologist.,Data Scientist."></span></span></h4>
                                         <p class="text-dark max-width-450 mx-0 my-4" style = "color:black;"><span class="base-color">I am a PhD student @ University of Miami studying air sea physics & remote sensing with a B.S. in Meteorology  </span></p>
                                         <div>
                                             <ul class="list-inline social-icon mt-2">
@@ -604,7 +604,7 @@
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-twitter-filled text-dark mr-2"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-github-original text-dark mr-2"></i></a></li>
                                  <li class="list-inline-item"><a class="text-white" href="#"><i class="lni-linkedin-original text-dark mr-2"></i></a></li> -->
-                                 <li class="list-inline-item"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original text-dark"></i></a></li>
+                                 <li class="list-inline-item"><span class="base-color"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original text-dark"></i></a></span></li>
                                                 <!-- <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni-youtube-filled text-dark"></i></a></li> -->
                                  <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled text-dark"></i></a></li>
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);">
