--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                          </div>
                                          <div class="col-lg-5 col-sm-6 personal-info">
                                             <p class="text-dark mb-2"><span class="base-color">City: Miami, Florida, USA</span></p>
-                                            <p class="text-dark mb-2"><span class="base-color">Degree: PhD</span></p>
+                                            <p class="text-dark mb-2"><span class="base-color">Degree: Meteorology B.S., Marine Physics PhD Candidate</span></p>
                                             
                                             
                                              <!-- <p class="text-dark">Freelance : <span class="text-gray">Available</span></p> -->
