--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                                 
                                                 <li class="list-inline-item"><a href="https://www.linkedin.com/in/samanthaballard2/"><i class="lni-linkedin-original text-dark"></i></a></li>
                                                 <li class="list-inline-item"><a href="https://pin.it/3FE1EAn"><i class="lni lni-pinterest text-dark"></i></a></li>
-                                                <li class="list-inline-item"><a href="https://open.spotify.com/user/1213078565?si=9g-nukmvRoaGv1_5O0D6pA"><i class="lni lni-spotify"></i></a></li>
+                                                <li class="list-inline-item"><a href="https://open.spotify.com/user/1213078565?si=9g-nukmvRoaGv1_5O0D6pA"><i class="lni lni-spotify text-dark"></i></a></li>
                                                 <!-- <li class="list-inline-item"><a href="https://www.tiktok.com/@air.sea.sam"><i class="lni-tiktok-original text-dark"></i></a></li> -->
                                                 <li class="list-inline-item"><a href="https://paypal.me/airseasam?locale.x=en_US"><i class="lni lni-paypal text-dark"></i></i></a></li> 
                                             </ul>
