--- a/index.html
+++ b/index.html
@@ -141,12 +141,12 @@
                                                 <li class="list-inline-item"><a href="#"><i class="lni-github-original"></i></a></li>
                                                 <li class="list-inline-item"><a href="#"><i class="lni-linkedin-original"></i></a></li> -->
                                                 <li class="list-inline-item"><a href="https://www.instagram.com/air.sea.sam"><i class="lni-instagram-original "></i></a></li>
-                                                <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni lni-youtube ></i></i></a></li> 
-                                                <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled"></i></a></li>
+                                                <li class="list-inline-item"><a href="https://www.youtube.com/channel/UC8KMQw7Y-Qrna5GuHlSyLRw"><i class="lni lni-youtube"></i></a></li> 
+                                                <li class="list-inline-item"><a href="https://twitter.com/air_sea_sam"><i class="lni-twitter-filled "></i></a></li>
                                                 <!-- <li class="list-inline-item"><a href="javascript:void(0);">
                                                     <i class="lni-github-original text-dark"></i></a></li> -->
                                                 
-                                                <li class="list-inline-item"><a href="https://www.linkedin.com/in/samanthaballard2/"><i class="lni-linkedin-original text-dark"></i></a></li>
+                                                <li class="list-inline-item"><a href="https://www.linkedin.com/in/samanthaballard2/"><i class="lni-linkedin-original"></i></a></li>
                                             </ul>
                                             </li>
                                         </ul>
