--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                                                         <!--<button type="button" data-toggle="modal" data-target="#portfolio-single">
                                                             <i class="lni-link"></i>
                                                         </button>-->
-                                                        <a href="http://placehold.it/600x450" class="js-zoom-gallery">
+                                                        <a href="assets\img\hawaii.jpg" class="js-zoom-gallery">
                                                             <i class="lni-search"></i>
                                                         </a>
                                                     </div>
