--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
                                             <li data-menuanchor="resume" class="list-group-item"><a href="#Resume">Resume</a></li> 
                                             
                                             <li data-menuanchor="research" class="list-group-item"><a href="#Research">Research</a></li> 
-                                            <li data-menuanchor="portfolio" class="list-group-item"><a href="#portfolio">Portfolio</a></li>
-                                            <!--<li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> ---<
+                                            <!--<li data-menuanchor="blog" class="list-group-item"><a href="#blog">Blog</a></li> -->
                                         </ul>
                                         <ul class="list-group contact-info text-left mb-0">
                                             <!-- <li class="list-group-item"><span>Contact Info :</span></li>
